<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/id_weather_city_setting"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/id_head_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_back_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:visibility="invisible"
                android:text="@string/string_go_back" />

            <TextView
                android:id="@+id/id_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/string_select_city" />

            <TextView
                android:id="@+id/id_curr_select"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/id_done_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:visibility="invisible"
                android:layout_height="wrap_content"
                android:text="@string/string_done" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />

        <GridView
            android:id="@+id/id_city_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/id_head_info"
            android:numColumns="4"
            android:padding="10dp">

        </GridView>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/id_weather_setting_display"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/id_curr_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/id_change_weather_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/string_change"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/id_exception_weather"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="@dimen/dimen_weather_text_size"
                android:textColor="#FFFFFF"
                android:visibility="gone"
                android:background="@drawable/weather_setting_bg"
                android:gravity="center"/>
            <LinearLayout
                android:id="@+id/id_weather_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:background="@drawable/weather_setting_bg"
                android:layout_weight="5">
                <!-- 白天天气 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/string_home_day_weather"
                        android:textColor="#FFFFFF"/>
                    <ImageView
                        android:id="@+id/id_day_weather_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:id="@+id/id_day_weather_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-20dp"
                        android:gravity="center_horizontal"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/dimen_weather_text_size"/>
                </LinearLayout>
                <!-- 夜间天气 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/string_home_night_weather"
                        android:textColor="#FFFFFF"/>
                    <ImageView
                        android:id="@+id/id_night_weather_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:id="@+id/id_night_weather_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-20dp"
                        android:gravity="center_horizontal"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/dimen_weather_text_size"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>